--- a/compare-results/app2/window.ui
+++ b/compare-results/app2/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>542</width>
-    <height>376</height>
+    <width>800</width>
+    <height>392</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,8 +32,8 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>47</width>
-      <height>13</height>
+      <width>111</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -66,9 +66,9 @@
    <widget class="QPushButton" name="btnAbrir">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>280</x>
       <y>290</y>
-      <width>81</width>
+      <width>111</width>
       <height>31</height>
      </rect>
     </property>
@@ -85,7 +85,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>400</x>
       <y>60</y>
       <width>47</width>
       <height>13</height>
@@ -98,9 +98,9 @@
    <widget class="QPushButton" name="btnPlotar">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>290</y>
-      <width>101</width>
+      <x>640</x>
+      <y>350</y>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
@@ -113,8 +113,8 @@
      <rect>
       <x>10</x>
       <y>290</y>
-      <width>171</width>
-      <height>71</height>
+      <width>201</width>
+      <height>91</height>
      </rect>
     </property>
     <property name="title">
@@ -124,8 +124,8 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>40</y>
-       <width>61</width>
+       <y>50</y>
+       <width>71</width>
        <height>22</height>
       </rect>
      </property>
@@ -148,8 +148,8 @@
     <widget class="QComboBox" name="comboDecimal">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>40</y>
+       <x>90</x>
+       <y>50</y>
        <width>31</width>
        <height>22</height>
       </rect>
@@ -168,9 +168,9 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>20</y>
-       <width>41</width>
+       <x>90</x>
+       <y>30</y>
+       <width>61</width>
        <height>16</height>
       </rect>
      </property>
@@ -182,7 +182,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
+       <y>30</y>
        <width>61</width>
        <height>16</height>
       </rect>
@@ -197,7 +197,7 @@
      <rect>
       <x>10</x>
       <y>80</y>
-      <width>301</width>
+      <width>381</width>
       <height>201</height>
      </rect>
     </property>
@@ -205,9 +205,9 @@
    <widget class="QListWidget" name="listColunas">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>400</x>
       <y>80</y>
-      <width>211</width>
+      <width>381</width>
       <height>201</height>
      </rect>
     </property>
@@ -225,56 +225,117 @@
      <string>Atualizar</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBoxCSV">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>310</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar CSV</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxPDF">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>330</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar PDF</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxSVG">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>350</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar SVG</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxHTML">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
+      <x>400</x>
       <y>290</y>
-      <width>81</width>
-      <height>20</height>
+      <width>231</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Salvar</string>
+    </property>
+    <widget class="QCheckBox" name="checkBoxCSV">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>58</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar CSV</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxSVG">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>58</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar SVG</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxPDF">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>28</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar PDF</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxHTML">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>28</y>
+       <width>101</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar HTML</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QComboBox" name="comboOpcoes">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>320</y>
+      <width>141</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Linhas+Marcadores</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Linhas</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Marcadores</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>300</y>
+      <width>47</width>
+      <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>Salvar HTML</string>
+     <string>Opções:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="editFiltro">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>58</y>
+      <width>321</width>
+      <height>20</height>
+     </rect>
     </property>
    </widget>
   </widget>
