--- a/calcula-ei/core/window.ui
+++ b/calcula-ei/core/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>300</height>
+    <width>593</width>
+    <height>302</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,9 +59,9 @@
    <widget class="QComboBox" name="comboBoxDecimal">
     <property name="geometry">
      <rect>
-      <x>136</x>
+      <x>110</x>
       <y>80</y>
-      <width>80</width>
+      <width>51</width>
       <height>22</height>
      </rect>
     </property>
@@ -79,9 +79,9 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>136</x>
+      <x>110</x>
       <y>60</y>
-      <width>141</width>
+      <width>81</width>
       <height>16</height>
      </rect>
     </property>
@@ -107,7 +107,7 @@
      <rect>
       <x>20</x>
       <y>80</y>
-      <width>101</width>
+      <width>81</width>
       <height>22</height>
      </rect>
     </property>
@@ -130,10 +130,10 @@
    <widget class="QPushButton" name="btnCalcular">
     <property name="geometry">
      <rect>
-      <x>309</x>
-      <y>250</y>
+      <x>470</x>
+      <y>80</y>
       <width>101</width>
-      <height>41</height>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
@@ -153,9 +153,9 @@
    <widget class="QPushButton" name="btnAbrir">
     <property name="geometry">
      <rect>
-      <x>309</x>
+      <x>180</x>
       <y>80</y>
-      <width>101</width>
+      <width>121</width>
       <height>24</height>
      </rect>
     </property>
@@ -163,57 +163,112 @@
      <string>Abrir</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBoxCSV">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>310</x>
       <y>180</y>
-      <width>111</width>
-      <height>20</height>
+      <width>261</width>
+      <height>111</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Salvar CSV</string>
+    <property name="title">
+     <string>Opções para salvar</string>
     </property>
+    <widget class="QCheckBox" name="checkBoxSVG">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>70</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar SVG</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxPDF">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>70</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar PDF</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxCSV">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>30</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar CSV</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxHTML">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>30</y>
+       <width>111</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Salvar HTML</string>
+     </property>
+    </widget>
    </widget>
-   <widget class="QCheckBox" name="checkBoxHTML">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>120</y>
-      <width>111</width>
-      <height>20</height>
+      <y>70</y>
+      <width>151</width>
+      <height>91</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Salvar HTML</string>
+    <property name="title">
+     <string>Método de cálculo</string>
     </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxPDF">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>150</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar PDF</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBoxSVG">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>210</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar SVG</string>
-    </property>
+    <widget class="QRadioButton" name="radioButtonASTM">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>95</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ASTM</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButtonEnergia">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>121</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Energia Interna</string>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
